--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,21 @@
 {
-	"name": "Export for Trello",
-	"version": "1.7",
-	"manifest_version" : 2,
-	
-	"description": "Export Trello Boards to Excel",
-	"icons": { "128": "icons/icon128.png" },
-	
-	"content_scripts": [
-		{
-			"matches": ["https://trello.com/*"],
-			"js": ["lib/jquery-2.1.0.min.js",
-                   "lib/FileSaver.js",
-                   "lib/xlsx.js",
-                   "lib/jszip.min.js",
-                   "trelloexport.js"]
-		}
-	],
-    "web_accessible_resources": [
-        "lib/jquery-2.1.0.min.map"]
-	
+  "name": "Export for Trello",
+  "version": "1.7",
+  "manifest_version" : 2,
+  "description": "Export Trello Boards to Excel",
+  "icons": {
+    "128": "icons/icon128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://trello.com/*"],
+      "js": [
+        "lib/jquery-2.1.1.min.js",
+        "lib/FileSaver.min.js",
+        "lib/jszip.min.js",
+        "lib/xlsx.js",
+        "trelloexport.js"
+      ]
+    }
+  ]
 }
